text alignment fix

--- a/styles.css
+++ b/styles.css
@@ -47,13 +47,16 @@ body {
     gap: 10px;
     padding: 10px;
   }
-  
+
   .grid-item {
     padding: 5px;
     border: 3px solid #007e00;
     color:black;
     text-align: center;   
    
+  }
+  .info{
+    text-align: justify;
   }
 
 
